# kyber-rust-thesis

./: 16384.txt  21-03-2024  Cargo.toml  README.md  instructions.txt  memory.x  no_aliasing_final__ntt_c_kyber1024.S  ntt.S  ntt_rsut.S
.cargo/: config.toml
ai_explanations/: chatgpt-4o-rust-2.md  chatgpt-4o-rust.md  chatgpt_c.md  chatgpt_explaination.md  chatgpt_rust_to_c.md  chatgpt_rust_to_c_2.md  chatgpt_why_rust_is_fast.md
assembly/: no_aliasing_arm_final__ntt_c_kyber1024.S  no_aliasing_final__ntt_c_kyber1024.S  ntt_rust_kyber1024.S  ntt_with_values_rust_kyber1024.S
backup-cg/: cg.dot
examples/: compilation_analysis_ntt.rs  hello.rs  kyber_lib.rs  speed_evaluation.rs
src/: lib.rs
transpilation/: ntt_asm_to_c.c  ntt_asm_to_rust.rs  ntt_asm_to_rust_2.rs  rust_ntt_to_c.c
