[package]
authors = ["Francesco Medina <s280620@studenti.polito.it>"]
edition = "2018"
readme = "README.md"
name = "kyber-rust"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
rand_core = {version = "0.6.4",  default-features = false }
pqc_kyber = {version = "0.3.0", features = ["kyber512"]}

stm32f3xx-hal = { version = "0.9.1", default-features = false, features = ["rt", "stm32f303xc"] }
stm32f3 = { version = "0.14.0", features = ["stm32f303", "rt"] } #deve essere 0.14.0 per via che FLASH di pac è stm32f3 v 0.14.0

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "kyber-rust"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
