[package]
authors = ["Francesco Medina"]
edition = "2018"
readme = "README.md"
name = "kyber-rust"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
rand_core = {version = "0.6.4",  default-features = false }
rand = { version = "0.8.3", features = ["small_rng"], default-features = false }
pqc_kyber = {version = "0.7.1", features = ["kyber1024"]}
embedded-time = "0.12.1"

stm32f4xx-hal = { version = "0.20.0", default-features = false, features = ["stm32f407"] }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "kyber-rust"
test = false
bench = false

#[profile.dev]
#opt-level="z"

[profile.release]
opt-level=3
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
